bin/tests/sema/compiler/compiler_global_attribute_err.swg
#global fileprivate
#global #[Swag] // swc-expected-error {{sema_err_not_attribute}}
